<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dk.prmedia.context.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/cat_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="16dp"
            android:text="@string/cat_list"
            android:textSize="25sp"
            android:fontFamily="sans-serif"
            android:textAllCaps="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <LinearLayout
                android:id="@+id/introduction_button"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:background="@color/cat_intr"
                android:layout_marginRight="4dp">

                <ImageView
                    android:src="@drawable/ic_format_list_bulleted_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/intro"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/various_button"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:background="@color/cat_vari"
                android:layout_marginLeft="4dp">

                <ImageView
                    android:src="@drawable/ic_format_list_bulleted_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/various"
                    android:layout_gravity="center"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <LinearLayout
                android:id="@+id/local_authority_button"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:background="@color/cat_auth"
                android:layout_marginRight="4dp">

                <ImageView
                    android:src="@drawable/ic_account_balance_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/local_auth"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/library_button"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:background="@color/cat_libr"
                android:layout_marginLeft="4dp">

                <ImageView
                    android:src="@drawable/ic_library_books_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/library"
                    android:layout_gravity="center"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp">

            <LinearLayout
                android:id="@+id/grocery_store_button"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:background="@color/cat_groc"
                android:layout_marginRight="4dp">

                <ImageView
                    android:src="@drawable/ic_store_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grocery"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/doctor_button"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:background="@color/cat_dire"
                android:layout_marginLeft="4dp">

                <ImageView
                    android:src="@drawable/ic_directions_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/directions"
                    android:layout_gravity="center"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="4dp"
            android:baselineAligned="false">


            <LinearLayout
                android:id="@+id/welcome_button"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:background="@color/dot_dark_screen1">

                <TextView
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="First time ?"
                    android:layout_gravity="center"
                    android:gravity="bottom"
                    android:textAllCaps="true"/>

                <TextView
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="Touch here to take this tour"
                    android:layout_gravity="center"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</ScrollView>
